--- a/.github/workflows/gh_pages.yaml
+++ b/.github/workflows/gh_pages.yaml
@@ -6,8 +6,8 @@ on:
       - main
 
 jobs:
-  build:
-    name: build
+  setup:
+    name: setup flutter environment
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,9 +17,24 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '3.0.1'
+  build:
+    name: build flutter for web
+    needs:
+      - setup
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: flutter --version
       - run: flutter pub get
       - name: run build
         run: flutter build web
+  deploy:
+    name: deploy github pages
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       - name: Deploy to GithubPages
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
