--- a/.github/workflows/gh_pages.yaml
+++ b/.github/workflows/gh_pages.yaml
@@ -20,7 +20,7 @@ jobs:
       - run: flutter --version
       - run: flutter pub get
       - name: run build
-        run: flutter build web
+        run: flutter build web --base-href "/github-actions/"
       - name: Deploy to GithubPages
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
