--- a/.github/workflows/gh_pages.yaml
+++ b/.github/workflows/gh_pages.yaml
@@ -6,9 +6,26 @@ on:
       - main
 
 jobs:
-  setup:
-    name: setup flutter environment
+  test:
+    name: Test
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '3.0.1'
+      - run: flutter --version
+      - run: flutter pub get
+      - name: Run All Test
+        run: flutter test test/*
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs:
+      - test
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
